# cli

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  install.ps1  install.ps1.sha256  install.sh  install.sh.sha256  pyproject.toml  skills-lock.json
.agents/: README.md  hooks.json  settings.json
.agents/agents/: test-engineer.md
.agents/commands/: agent-create.md  ai-diff-reviewer-apply-review.md  ai-diff-reviewer-generate-extension.md  ai-diff-reviewer-open-pr.md  ai-diff-reviewer-setup.md  ai-diff-reviewer.md  deepworkplan-onboard.md  design-system.md  dwp-create.md  dwp-execute.md  dwp-refine.md  dwp-resume.md  dwp-status.md  dwp-verify.md  skill-create.md
.agents/docs/: COMMANDS_REFERENCE.md  skills_agents_catalog.md
.agents/skills/cli-command-add/: SKILL.md
.agents/skills/dailybot/: SKILL.md
.agents/skills/dailybot-progress-report/: SKILL.md
.agents/skills/dailybot/ask/: SKILL.md
.agents/skills/dailybot/channels/: SKILL.md
.agents/skills/dailybot/chat/: SKILL.md
.agents/skills/dailybot/checkin/: SKILL.md
.agents/skills/dailybot/conversation/: SKILL.md
.agents/skills/dailybot/email/: SKILL.md
.agents/skills/dailybot/env/: SKILL.md
.agents/skills/dailybot/forms/: SKILL.md
.agents/skills/dailybot/forms/_custom-template/: SKILL.md
.agents/skills/dailybot/health/: SKILL.md
.agents/skills/dailybot/kudos/: SKILL.md
.agents/skills/dailybot/messages/: SKILL.md
.agents/skills/dailybot/report/: SKILL.md  hooks.md
.agents/skills/dailybot/shared/: auth.md  dashboard-urls.md  env-json.md  list-query-and-errors.md
.agents/skills/dailybot/teams/: SKILL.md
.agents/skills/dailybot/workflow/: SKILL.md
.agents/skills/deepworkplan/: SKILL.md
.agents/skills/deepworkplan/addons/dailybot/: SKILL.md  SPEC.md
.agents/skills/deepworkplan/addons/dailybot/templates/: INTEGRATION.md
.agents/skills/deepworkplan/addons/dependency-upgrade/: SKILL.md
.agents/skills/deepworkplan/addons/design-system/: SKILL.md  SPEC.md
.agents/skills/deepworkplan/addons/devcontainer/: SKILL.md
.agents/skills/deepworkplan/author/: SKILL.md
.agents/skills/deepworkplan/create/: SKILL.md
.agents/skills/deepworkplan/execute/: SKILL.md
.agents/skills/deepworkplan/onboard/: SKILL.md
.agents/skills/deepworkplan/refine/: SKILL.md
.agents/skills/deepworkplan/resume/: SKILL.md
.agents/skills/deepworkplan/spec/: ADDONS.md  DWP_SPECIFICATION.md  README.md
.agents/skills/deepworkplan/status/: SKILL.md
.agents/skills/deepworkplan/verify/: SKILL.md  conformance.sh
.agents/skills/doc-edit/: SKILL.md
.claude/: README.md
.claude/agents/: cli-developer.md  docs-writer.md  release-manager.md
.claude/skills/cli-command-add/: SKILL.md
.claude/skills/dependency-add/: SKILL.md
.claude/skills/endpoint-add/: SKILL.md
.claude/skills/quick-fix/: SKILL.md
.claude/skills/release-prep/: SKILL.md
.dailybot/: profile.json
.dailybot_example/: env.json  profile.json
.devcontainer_example/: devcontainer.json
.github/workflows/: auto-release.yml  code_check.yml  pr-review.yml  release.yml  sync-installer-checksums.yml
.review/: extension.md
.vscode_example/: settings.json
dailybot_cli/: __init__.py  api_client.py  config.py  display.py  install_method.py  ledger.py  main.py
dailybot_cli/commands/: agent.py  ask.py  auth.py  authoring_helpers.py  channels.py  chat.py  checkin.py  config.py  conversation.py  env.py  form.py  hook.py  identity.py  interactive.py  interactive_chat.py  kudos.py  public_api_helpers.py  query_options.py  status.py  team.py  uninstall.py  update.py  upgrade.py  user.py  user_scoped_actions.py  version.py  workflow.py
dailybot_cli/tui/: __init__.py  app.py  commands.py  conversation.py  intents.py
docker/: custom_commands.sh
docker/local/: docker-compose.yaml
docker/local/cli/: .env.example  Dockerfile  entrypoint.sh
docs/: AGENT_HOOKS.md  AI_AGENT_COLLAB.md  AI_AGENT_ONBOARDING.md  API_REFERENCE.md  ARCHITECTURE.md  CLI_COMMAND_BEST_PRACTICES.md  CONFIGURATION.md  DESIGN.md  DEVELOPMENT_COMMANDS.md  DEVELOPMENT_GUIDELINES.md  DISPLAY_OUTPUT_BEST_PRACTICES.md  DOCUMENTATION_GUIDE.md  ECOSYSTEM_CONTEXT.md  PERFORMANCE.md  PRODUCT_SPEC.md  PR_REVIEW_WORKFLOW.md  README.md  RELEASE_AND_DISTRIBUTION.md  SECURITY.md  STANDARDS.md  TESTING_GUIDE.md  TROUBLESHOOTING.md
requirements/: base.txt  dev.txt
tests/: agent_init_test.py  api_client_test.py  api_error_codes_alignment_test.py  api_key_parity_test.py  authoring_helpers_test.py  authoring_lifecycle_test.py  authoring_security_test.py  channels_command_test.py  chat_commands_test.py  checkin_answer_coercion_test.py  checkin_authoring_test.py  commands_test.py  comprehensive_integration_test.py  config_test.py  conftest.py  conversation_commands_test.py  display_escaping_test.py  env_commands_test.py  error_code_override_test.py  error_dispatch_test.py  fetch_all_resolution_test.py  form_authoring_test.py  form_question_types_test.py  free_plan_message_test.py  hook_commands_test.py  identity_commands_test.py  interactive_builder_test.py  kudos_filter_normalize_test.py  kudos_read_commands_test.py  ledger_test.py  plan_access_test.py  public_api_commands_test.py  query_options_test.py  repo_env_test.py  repo_profile_test.py  resource_uuid_test.py  tui_app_flows_test.py  tui_intents_test.py  uninstall_test.py  user_filter_validation_test.py  (+1 more)
